--- a/main.html
+++ b/main.html
@@ -8,6 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Time, Space, Complexity</h1>
+	<p>Time complexity is the time taken by a program to run or complete its operation.Time complexity, efficient</p>
+	<p><b>Space Complexity</b>, O(n) ,space taken by the program</p>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
